# speda-mark6

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  MULTI_TENANT_PLAN.md  README.md  build-app.ps1  claude_api_cost_2026_06_23_to_2026_06_29 (2).csv  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  speda.ps1  speda.py
.claude/: launch.json
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py
app/adapters/: shannon.py
app/core/: agent_registry.py  context.py  orchestrator.py  registry.py  session_manager.py
app/mcp/: client.py  servers.py
app/middleware/: auth.py
app/models/: __init__.py  agent.py  message.py  notification.py  session.py
app/profiles/: base.py  speda.py
app/routers/: admin.py  agents.py  chat.py
app/schemas/: agent.py  chat.py  sse.py
app/services/: anthropic_client.py  memory.py  n8n.py
app/skills/: base.py  documents.py  stt.py  system.py  tts.py
app/websocket/: manager.py
caddy-sites/: .gitkeep
docs/: ANDROID_PORT_PLAN.md  ATOMIX_HEALTH_SYNC.md  BACKGROUND_OPS_PLAN.md  FORGE_INTEGRATION_PLAN.md  HISAR_FORGE_PLACEMENT_PLAN.md  MEMORY_ARCHITECTURE.md  MEMORY_REVISION_R1.md  NEWS_BRIEFING_PLAN.md  README.md  REFERENCE.md  SETUP.md  STARK_MAPS_PLAN.md  TELEGRAM_ARCHITECTURE.md
logos/: make_pfp.py  preview.html
